feat:  macos 构建脚本

--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,6 @@
 			<version>2.7.2</version>
 		</dependency>
 		<dependency>
-			<groupId>de.onvif</groupId>
-			<artifactId>onvif-java-lib</artifactId>
-			<version>2016-03-16</version>
-		</dependency>
-		<dependency>
 			<groupId>org.python</groupId>
 			<artifactId>jython-standalone</artifactId>
 			<version>2.7.1</version>
@@ -431,6 +426,43 @@
 				<configuration>
 					<argLine>-Xmx1024m -XX:+UnlockDiagnosticVMOptions -XX:GCLockerRetryAllocationCount=100 --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/java.awt.color=ALL-UNNAMED</argLine>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>2.1.0</version>
+				<configuration>
+					<programs>
+						<program>
+							<mainClass>org.openpnp.Main</mainClass>
+							<name>openpnp</name>
+						</program>
+					</programs>
+					<platforms>
+						<platform>unix</platform>
+					</platforms>
+					<repositoryName>lib</repositoryName>
+					<repositoryLayout>flat</repositoryLayout>
+					<useWildcardClassPath>true</useWildcardClassPath>
+					<extraJvmArguments>
+						-Xdock:name=OpenPnP
+						--add-opens=java.base/java.lang=ALL-UNNAMED
+						--add-opens=java.desktop/java.awt=ALL-UNNAMED
+						--add-opens=java.desktop/java.awt.color=ALL-UNNAMED
+						--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED
+					</extraJvmArguments>
+					<outputDirectory>target/appassembler</outputDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<id>create-app</id>
+						<phase>package</phase>
+						<goals>
+							<goal>assemble</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 		</plugins>
